# StockAgentSample

./: Langgraph_stock_agent.ipynb  Langgraph_stock_agent_observation.ipynb  Langgraph_stock_chatbot.ipynb  Langraph_chatbot.ipynb  Langraph_learning.ipynb  Langraph_learning_multiple_nodes.ipynb  README.md  dockerfile  main.py  pyproject.toml
.github/workflows/: deploy.yml
backend/: agent.py  main.py
frontend/: index.html
tests/: test_logic.py
